--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Navigation With Tabs</string>
+
+    <string name="intro_description">The purpose of this app is to demonstrate using Navigation Components with a TabLayout with a Toolbar in certain fragments.</string>
+    <string name="intro_button_next_text">Navigate to next screen</string>
 </resources>
