--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="intro_description">The purpose of this app is to demonstrate using Navigation Components with a TabLayout with a Toolbar in certain fragments.</string>
     <string name="intro_button_next_text">Navigate to next screen</string>
+
+    <string name="tasks_title">Task Categories</string>
 </resources>
