Add ability to add tasks

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,6 @@
     <string name="tasks_title">Task Categories</string>
     <string name="menu_title_add">+Add Tab</string>
 
-    <string name="addTab_add">Add</string>
-    <string name="addTab_cancel">Cancel</string>
+    <string name="common_add">Add</string>
+    <string name="common_cancel">Cancel</string>
 </resources>
