Allow editing task names

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 
     <string name="common_add">Add</string>
     <string name="common_cancel">Cancel</string>
+    <string name="common_rename">Rename</string>
 </resources>
