--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,8 @@
     <string name="tasks_title">Categories</string>
     <string name="tasks_title_add">Add Task</string>
     <string name="tasks_title_rename">Rename %s</string>
-    <string name="menu_title_add">+Add Tab</string>
+    <string name="menu_item_title_add">+Add Cat</string>
+    <string name="menu_item_title_delete">Delete Cat</string>
 
     <string name="common_add">Add</string>
     <string name="common_cancel">Cancel</string>
