--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,11 @@
     <string name="intro_button_next_text">Navigate to next screen</string>
 
     <string name="tasks_title">Categories</string>
-    <string name="tasks_title_add">Add Task</string>
+    <string name="tasks_title_add">Add Item</string>
     <string name="tasks_title_rename">Rename %s</string>
 
-    <string name="categories_title">Delete Categories</string>
+    <string name="category_title_add">Add Category</string>
+    <string name="category_title_delete">Delete Categories</string>
 
     <string name="menu_item_title_add">+Add Cat</string>
     <string name="menu_item_title_delete">Delete Cat</string>
