--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="tasks_title">Categories</string>
     <string name="tasks_title_add">Add Item</string>
     <string name="tasks_title_rename">Rename %s</string>
+    <string name="tasks_action_complete">Complete Task</string>
 
     <string name="category_title_add">Add Category</string>
     <string name="category_title_delete">Delete Categories</string>
