--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="menu_item_title_add">+Add Cat</string>
     <string name="menu_item_title_delete">Delete Cat</string>
 
+    <string name="menu_item_title_complete_item">Mark Complete</string>
+
     <string name="common_add">Add</string>
     <string name="common_cancel">Cancel</string>
     <string name="common_rename">Rename</string>
