--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="common_cancel">Cancel</string>
     <string name="common_rename">Rename</string>
     <string name="common_delete">Delete</string>
+    <string name="common_restore">Restore</string>
 </resources>
