--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
 
     <string name="menu_item_title_add">+Add Cat</string>
     <string name="menu_item_title_delete">Delete Cat</string>
+    <string name="menu_item_title_share">Share</string>
 
     <string name="menu_item_title_complete_item">Mark Complete</string>
 
@@ -22,4 +23,6 @@
     <string name="common_rename">Rename</string>
     <string name="common_delete">Delete</string>
     <string name="common_restore">Restore</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
