NWT-31 Update screen title

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,13 @@
     <string name="lists_action_complete">Complete Task</string>
 
     <string name="list_title_add">Add List</string>
+    <string name="list_title_edit">Edit Lists</string>
     <string name="list_title_delete">Delete Lists</string>
 
     <string name="error_msg_name_required">Name is required</string>
 
     <string name="menu_item_title_add">+Add Cat</string>
+    <string name="menu_item_title_edit">Edit List Title</string>
     <string name="menu_item_title_delete">Delete Cat</string>
     <string name="menu_item_title_share">Share</string>
 
