NWT-39 Replace string literals with resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,13 @@
     <string name="list_title_add">Add List</string>
     <string name="list_title_edit">Edit Lists</string>
     <string name="list_title_delete">Delete Lists</string>
+    <string name="list_title_share">Share List: %s?</string>
+
+    <string name="button_list_share">Share</string>
+
+    <string name="list_deletedItems_itemText">%s (%s)</string>
+
+    <string name="list_delete_message">%s?\n\nDeleting lists also deletes associated Items (action cannot be undone).</string>
 
     <string name="error_msg_name_required">Name is required</string>
 
