--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="lists_title">Lists</string>
     <string name="lists_title_add">Add Item</string>
-    <string name="lists_title_rename">Rename %s</string>
+    <string name="lists_title_edit">Edit %s</string>
     <string name="lists_title_deleted">Deleted Items</string>
     <string name="lists_action_complete">Complete Task</string>
 
