NWT-42 Add Move button to Edit Item screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,8 @@
     <string name="common_rename">Rename</string>
     <string name="common_delete">Delete</string>
     <string name="common_restore">Restore</string>
+    <string name="button_move">Move</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
