NWT-53 Update Add/Edit Item screen UI to include Reminders list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="item_add_reminder">Add Reminder</string>
+    <string name="item_reminders">Reminders</string>
+    <string name="reminder_remove">Remove Reminder</string>
 </resources>
