NWT-43 Add title/message to move item dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="lists_title_deleted">Deleted Items</string>
     <string name="lists_action_complete">Complete Task</string>
 
+    <string name="item_title_move">Move Item</string>
+    <string name="item_move_message">Select List where to move item</string>
+
     <string name="list_title_add">Add List</string>
     <string name="list_title_edit">Edit Lists</string>
     <string name="list_title_delete">Delete Lists</string>
