NWT-56 Create Reminder Notification upon receiving Alarm Broadcast

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,9 @@
     <string name="common_restore">Restore</string>
     <string name="button_move">Move</string>
 
+    <string name="notification_channel_title_high">High</string>
+    <string name="notification_channel_description_high">Sound</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="item_add_reminder">Add Reminder</string>
