--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="item_add_reminder">Add Reminder</string>
     <string name="item_reminders">Reminders</string>
+    <string name="item_reminders_icon">Has Reminders icon</string>
     <string name="reminder_remove">Remove Reminder</string>
 </resources>
