--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,9 @@
 
     <string name="error_msg_name_required">Name is required</string>
 
+    <string name="menu_drawer_title_deletedItems">Deleted Items</string>
+    <string name="menu_drawer_title_about">About</string>
+
     <string name="menu_item_title_add">+Add Cat</string>
     <string name="menu_item_title_edit">Edit List Title</string>
     <string name="menu_item_title_delete">Delete Cat</string>
